Adding some incremental work on Nav drawer

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,16 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="connectivity_error">Could not connect to network</string>
+    <string name="server_error">The server encountered an error, please try again.</string>
+    <string name="generation_types_header">Are these clean?</string>
+    <string name="drawer_open">ABC123</string>
+    <string name="drawer_close">DEF456</string>
+
+    <string-array name="navigation_array">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+    </string-array>
 
 </resources>
