--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,8 @@
     
     <string name="data_api_stem" formatted="false">http://api.watttime.org/api/v1/datapoints/?format=json&amp;?ba=%s&amp;start_at=%s&amp;end_at=%s&amp;page_size=%s&amp;freq=%s</string>
     <string name="abbr_api_stem" formatted="false">http://api.watttime.org/api/v1/balancing_authorities/?format=json&amp;loc=POINT+%%28%+09.4f%%20%+09.4f%%29</string>
-
+	<string name="widget_api_stem" formatted="false">http://api.watttime.org/api/v1/datapoints/?format=json&amp;?ba=%s&amp;page_size=1</string>
+    
     <!-- Graph string constants -->
     <string name="graph_title">% Renewable vs Time</string>
     <string name="graph_x_axis">Time</string>
