Changing more on styles, some main bugfixes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,11 +21,11 @@
     <string name="abbr_api_stem" formatted="false">http://api.watttime.org/api/v1/balancing_authorities/?format=json&amp;loc=POINT+%%28%+09.4f%%20%+09.4f%%29</string>
     
     <!-- Graph string constants -->
-    <string name="graph_title">% Renewable vs Time</string>
+    <string name="graph_title">% Clean vs Time</string>
     <string name="graph_x_axis">Time</string>
-    <string name="graph_y_axis">% Renewable</string>
+    <string name="graph_y_axis">% Clean</string>
     <string name="series_1_title">Live Data</string>
-    <string name="percentage_format" formatted="false">Your energy is %2.1f%% green</string>
+    <string name="percentage_format" formatted="false">Your energy is %2.1f%% clean</string>
     
     <string-array name="navigation_array">
         <item>Home</item>
